test/tests/compiler/8_loops/invalid_parse/statement_in_condition.plx
pub fn main(none) i32 {
    loop while a: i32; {
        2
    }
}